--- a/biome.json
+++ b/biome.json
@@ -19,7 +19,11 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"complexity": {
+				"noForEach": "off",
+				"useLiteralKeys": "warn"
+			}
 		}
 	},
 	"javascript": {
