--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "@aws-sdk/s3-request-presigner": "^3.787.0",
         "argon2": "^0.41.1",
         "axios": "^1.8.4",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^4.21.2",
@@ -38,6 +39,7 @@
         "@eslint/js": "^9.25.0",
         "@types/bcryptjs": "^2.4.6",
         "@types/chai": "^5.2.1",
+        "@types/cookie-parser": "^1.4.8",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.1",
         "@types/ioredis": "^5.0.0",
