--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    runs-on: codebuild-airq-${{github.run_id}}-${{github.run_attempt}} # Ensure you're using GitHub-hosted runners for GitHub Actions
+    runs-on: codebuild-airq-${{github.run_id}}-${{github.run_attempt}}
 
     steps:
       - name: Checkout repository
@@ -18,27 +18,36 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: "ap-southeast-1"
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: server/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('server/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install dependencies
         run: |
-          cd server
           npm install
           npm install -g node-gyp
           npm install argon2
+        working-directory: server
 
       - name: Download secrets from AWS Secrets Manager
         run: |
-          cd server
           aws secretsmanager list-secrets --query 'SecretList[*].Name' --output text | tr '\t' '\n' | while read secret; do
             aws secretsmanager get-secret-value --secret-id "$secret" --query SecretString --output text | jq -r 'to_entries | .[] | "\(.key)=\(.value)"' >> .env
           done
+        working-directory: server
 
       - name: Test
-        run: cd server && npm test
+        run: npm test
+        working-directory: server
 
   build:
     needs: test
-    runs-on: codebuild-airq-${{github.run_id}}-${{github.run_attempt}} # Ensure you're using GitHub-hosted runners for GitHub Actions
+    runs-on: codebuild-airq-${{github.run_id}}-${{github.run_attempt}}
 
     steps:
       - name: Checkout repository
@@ -53,39 +62,14 @@ jobs:
 
       - name: Download secrets from AWS Secrets Manager
         run: |
-          cd server
           aws secretsmanager list-secrets --query 'SecretList[*].Name' --output text | tr '\t' '\n' | while read secret; do
             aws secretsmanager get-secret-value --secret-id "$secret" --query SecretString --output text | jq -r 'to_entries | .[] | "\(.key)=\(.value)"' >> .env
           done
+        working-directory: server
 
-      - name: Dist
+      - name: Build Docker image and upload
         run: |
-          mkdir dist
-          cd dist
-          aws secretsmanager list-secrets --query 'SecretList[*].Name' --output text | tr '\t' '\n' | while read secret; do
-            aws secretsmanager get-secret-value --secret-id "$secret" --query SecretString --output text | jq -r 'to_entries | .[] | "\(.key)=\(.value)"' >> .env
-          done
-
-      # - name: Build application
-      # run: |
-      # cd server
-      # npm run build
-
-      # - name: Run Docker and Upload to S3
-      #   run: |
-      #     cd server
-      #     aws s3 cp dist s3://uet-airq/build/ --recursive
-      - name: Run Docker and Upload
-        run: |
-          cd server
-          aws secretsmanager list-secrets --query 'SecretList[*].Name' --output text | tr '\t' '\n' | while read secret; do
-            aws secretsmanager get-secret-value --secret-id "$secret" --query SecretString --output text | jq -r 'to_entries | .[] | "\(.key)=\(.value)"' >> .env
-          done
           npm run docker
           docker save airq-server:latest | gzip > airq-server.tar.gz
           aws s3 cp airq-server.tar.gz s3://uet-airq/airq-server.tar.gz
-
-      # Uncomment the below section if needed to sync the dist directory
-      # - name: Create artifact
-      #   run: |
-      #     aws s3 sync server/dist s3://uet-airq/dist --delete
+        working-directory: server
