--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
         "react": "^18.3.1",
         "react-chartjs-2": "^5.3.0",
         "react-compiler-runtime": "^19.0.0-beta-714736e-20250131",
+        "react-cookie": "^8.0.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.4.0",
         "react-leaflet": "^4.2.1",
